Update version to 0.10.0

--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@ title: Docs
   <table>
     <tr>
       <td><a class="punch" href="d3.chart.multi.js">Development Version ({{ site.version }})</a></td>
-      <td class="text"><i>112kb, Full source with tons of comments</i></td>
+      <td class="text"><i>92kb, Full source with tons of comments</i></td>
     </tr>
     <tr>
       <td><a class="punch" href="d3.chart.multi.min.js">Production Version ({{ site.version }})</a></td>
       <td class="text" style="line-height: 16px;">
-        <i>11.7kb, Packed and gzipped</i><br>
-        <small>(<a href="d3.chart.multi.min.map">Source Map</a>)</small>
+        <i>9.6kb, Packed and gzipped</i><br>
+        <small>(<a href="d3.chart.multi.min.js.map">Source Map</a>)</small>
       </td>
     </tr>
     <tr>
