--- a/examples/index.html
+++ b/examples/index.html
@@ -1,19 +1,9 @@
 ---
 layout: default
 title: Example
+scripts: |
+  <script src="../js/examples.js"></script>
 ---
-<header class="header clearfix">
-  <h1 class="header-branding"><a class="branding header-link" href="#">d3.chart.multi</a></h1>
-  <nav class="header-navigation">
-    <ul class="inline-list">
-      <li><a class="header-link" href="#">Getting Started</a></li>
-      <li><a class="header-link" href="#">Examples</a></li>
-      <li><a class="header-link" href="#">Docs</a></li>
-      <li><a class="header-link" href="#">GitHub</a></li>
-    </ul>
-  </nav>
-</header>
-
 <article class="content example">
   <section class="example-chart">
     Chart...
@@ -22,7 +12,3 @@ title: Example
     Composer... (js, data, html)
   </section>
 </article>
-
-<script type="text/javascript">
-
-</script>
